--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <aside id="sidebar" class="sidebar" aria-label="Stop points">
+      <div class="sidebar-header">
+        <span class="sidebar-title">Stop Points</span>
+        <span class="sidebar-subtitle">Complete cada etapa</span>
+      </div>
+      <div id="stop-list" class="stop-list"></div>
+    </aside>
+
     <div id="hud">
       <div class="brand">Learning Path</div>
       <div id="hud-hint" class="hint"></div>
