--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <aside id="sidebar" class="sidebar" aria-label="Stop points">
       <div class="sidebar-header">
+        <img class="sidebar-logo" src="imgs/logo_empresa.jpg" alt="Logo da empresa" />
         <span class="sidebar-title">Stop Points</span>
         <span class="sidebar-subtitle">Complete cada etapa</span>
       </div>
