--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <button
+      id="sidebar-toggle"
+      class="sidebar-toggle"
+      type="button"
+      aria-controls="sidebar"
+      aria-expanded="false"
+    >
+      Mostrar menu
+    </button>
+
     <aside id="sidebar" class="sidebar" aria-label="Stop points">
       <div class="sidebar-header">
         <img class="sidebar-logo" src="imgs/logo_empresa.jpg" alt="Logo da empresa" />
